# base

./: CMakeLists.txt  gocxx_base.pc.in
include/gocxx/: defer.h  result.h
include/gocxx/base/: chan.h  result.h
tests/: base_test.cpp
